--- a/shoppingcenter.yaml
+++ b/shoppingcenter.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.2
 info:
-  title: Shoppin Center
+  title: Shopping Center
   description: >-
      This API provides us with different information about the users to use in the shopping centre to provide a better experience in the visit
   version: '1.0'
